<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:layout_margin="20dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.christophercassion.demo.sign_up"
    android:gravity="fill">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/sign_up_title"
        android:id="@+id/Login_title"
        android:gravity="center|left|top" />

    <EditText android:id="@+id/first_name"
        android:layout_width="wrap_content"
        android:layout_margin="10dp"
        android:layout_height="wrap_content"
        android:hint="@string/first_name"
        android:inputType="textNoSuggestions|textCapWords|textPersonName" />

    <EditText android:id="@+id/last_name"
        android:layout_width="wrap_content"
        android:layout_margin="10dp"
        android:layout_height="wrap_content"
        android:hint="@string/last_name"
        android:inputType="textNoSuggestions|textCapWords|textPersonName" />

    <EditText android:id="@+id/client_email"
        android:layout_width="wrap_content"
        android:layout_margin="10dp"
        android:layout_height="wrap_content"
        android:hint="@string/client_email"
        android:inputType="textEmailAddress" />

    <EditText android:id="@+id/client_password"
        android:layout_width="wrap_content"
        android:layout_margin="10dp"
        android:layout_height="wrap_content"
        android:hint="@string/client_password"
        android:inputType="textPassword" />

    <EditText android:id="@+id/client_birthday"
        android:layout_width="wrap_content"
        android:layout_margin="10dp"
        android:layout_height="wrap_content"
        android:hint="@string/client_birthday"
        android:inputType="date" />

    <EditText android:id="@+id/phone_number"
        android:layout_width="wrap_content"
        android:layout_margin="10dp"
        android:layout_height="wrap_content"
        android:hint="@string/phone_number"
        android:inputType="textPhonetic" />

    <Button
        android:id="@+id/btli"
        android:layout_width="wrap_content"
        android:layout_margin="10dp"
        android:layout_height="wrap_content"
        android:text="@string/Register"
        android:clickable="true"/>
</TableLayout>
