<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:gravity="center">

    <EditText android:id="@+id/client_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/client_email" />

    <EditText android:id="@+id/client_phoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/phone_number"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/retrieved"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/request_password"
        android:onClick="sendMessage"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:text="@string/p_reset_disclaimer"
        android:id="@+id/textView"
        android:gravity="center|fill_horizontal|bottom" />

</TableLayout>
